--- a/app/views/sent_returns/index_show.html.erb
+++ b/app/views/sent_returns/index_show.html.erb
@@ -1,13 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-auto">
-      <h3><i class="fas fa-gifts"> sent return item index</i></h3>
+      <h3><i class="fas fa-gifts"> gift return index</i></h3>
     </div>
   </div>
 </div>
-<% if flash[:notice] %>
-<p class="notice"><%= flash[:notice] %></p>
-<% end %>
 <div class="container">
   <div class="row">
     <div class="col">
@@ -16,25 +13,21 @@
           <% @sent_returns.each_with_index do |sent_return,i| %>
           <thead class="table-info">
             <tr>
-              <th> RETURN ITEM No. <%=i +1 %></th>
+              <th>Return No. <%=i +1 %></th>
               <th></th>
             </tr>
           </thead>
           <tr>
             <th><i class="fas fa-gifts"> gift</i></th>
-            <td><%= link_to sent_return.product,sent_return_path(sent_return)%></td>
-          </tr>
-          <tr>
-            <th><i class="far fa-user"> : from</i></th>
-            <td><%= sent_return.sent_item.family_person.family_person %></td>
-          </tr>
-          <tr>
-            <th><i class="fa-solid fa-user"> : from</i></th>
-            <td><%= sent_return.sent_item.sent_person.sent_person %></td>
+            <td><%= link_to sent_return.product, sent_return_path(sent_return)%></td>
           </tr>
           <tr>
             <th><i class="far fa-money-bill-alt"> amount</i></th>
             <td><%= sent_return.price %></td>
+          </tr>
+          <tr>
+            <th><i class="far fa-comment-dots"> reason</i></th>
+            <td><%= sent_return.introduction %></td>
           </tr>
           <tr>
             <th><i class="far fa-calendar-alt"> date</i></th>
@@ -47,12 +40,13 @@
               <% end %>
               <%= link_to sent_return_path(sent_return),class: "btn btn-danger rounded-circle btn-lg", method: :delete, data: { confirm: "本当に削除しますか？" } do %>
               <i class="far fa-trash-alt fa-1x"></i>
-              <% end %></td>
+              <% end %>
+            </td>
             <td></td>
           </tr>
           <% end %>
         </table>
-        <p><%= link_to  root_path, class: "btn btn-default rounded-pill" do %>
+        <p><%= link_to  sent_items_path, class: "btn btn-default rounded-pill" do %>
           <i class="fas fa-arrow-circle-left"></i>
           <span>back</span>
           <% end %>
