検索機能 画像upボタン変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,3 +29,7 @@ $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
   border-radius: 15px;
   object-fit: cover;
 }
+
+.navbar-brand{
+  font-size: 60px;
+}
