--- a/app/views/give_items/_give_item_form.html.erb
+++ b/app/views/give_items/_give_item_form.html.erb
@@ -2,15 +2,13 @@
   <div class="col mx-3">
     <table class="thead-dark">
       <%= form_with model: @give_item,local: true do |f| %>
-      <tr class="col-xs-2">
+      <tr>
         <div class="form-group">
           <th style="width: 30%"><i class="fas fa-gifts"> gift</i></th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
-          <div class="col-md-2">
-            <td style="width: 65%"><%= f.text_field :product , class: "form-control"%></td>
-          </div>
+          <td style="width: auto%"><%= f.text_field :product , class: "form-control"%></td>
         </div>
       </tr>
       <tr>
@@ -19,7 +17,7 @@
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
-          <td style="width: 65%">
+          <td style="width: auto%">
             <%= f.collection_select :give_person_id, GivePerson.all, :id, :give_person, {include_blank: "選択して下さい"}, {class: "form-control input-sm"} %>
           </td>
         </div>
@@ -30,7 +28,7 @@
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
-          <td style="width: 65%">
+          <td style="width: auto%">
             <%= f.collection_select :family_person_id, FamilyPerson.all, :id, :family_person,{include_blank: "選択して下さい"}, {class: "form-control input-sm"} %>
           </td>
         </div>
@@ -41,7 +39,7 @@
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
-          <td style="width: 65%">
+          <td style="width: auto%">
             <%= f.collection_select :genre_id, Genre.all, :id, :genre,{include_blank: "選択して下さい"}, {class: "form-control input-sm"} %>
           </td>
         </div>
@@ -52,7 +50,7 @@
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
-          <td style="width: 65%"><%= f.number_field :price, class: "form-control" %></td>
+          <td style="width: auto%"><%= f.number_field :price, class: "form-control" %></td>
         </div>
       </tr>
       <tr>
@@ -61,7 +59,7 @@
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
-          <td style="width: 65%"><%= f.text_field  :reason, class: "form-control"%></td>
+          <td style="width: auto%"><%= f.text_field  :reason, class: "form-control"%></td>
         </div>
       </tr>
       <tr>
@@ -70,7 +68,7 @@
           <th style="width: 5%">
             <div></div>
           </th>
-          <td style="width: 65%"><%= f.text_field  :introduction, class: "form-control"%></td>
+          <td style="width: auto%"><%= f.text_field  :introduction, class: "form-control"%></td>
         </div>
       </tr>
       <tr>
@@ -79,16 +77,18 @@
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
-          <td style="width: 65%"><%= f.date_field :give_day, class: "form-control"%></td>
+          <td style="width: auto%"><%= f.date_field :give_day, class: "form-control"%></td>
         </div>
       </tr>
       <tr>
         <div class="form-group">
           <th style="width: 30%"><i class="fas fa-image"> photo</i></th>
           <th style="width: 5%">
-            <div></div>
           </th>
-          <td style="width: 65%"><%= f.file_field:image %> </td>
+          <td style="width: auto%">
+            <%= f.label :image, "Phto Select",class: "image_input_btn"  %>
+            <%= f.file_field:image, class: "image_form"  %>
+          </td>
         </div>
       </tr>
     </table>
