--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,6 +1,10 @@
 <div class="bg">
-  <div class="mx-auto" style="width: 250px;">
-    <h1>GIVE & SENT</h1>
+  <div class="container">
+    <div class="row">
+      <div class="mx-auto" style="width: auto;">
+        <h1>Give & Sent</h1>
+      </div>
+    </div>
   </div>
   <div class="container">
     <div class="row justify-content-around">
