--- a/app/views/genres/_genre_form.html.erb
+++ b/app/views/genres/_genre_form.html.erb
@@ -1,10 +1,10 @@
 <div class="row">
-  <div class="col-100 mx-auto">
+  <div class="col mx-3">
     <table class="thead-dark">
       <%= form_with model: @genre,local: true do |f| %>
       <tr>
         <div class="form-group">
-          <th style="width: 40%"><i class="fas fa-layer-group">　Genre</th>
+          <th style="width: 30%"><i class="fas fa-layer-group">　Genre</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
