--- a/app/views/sent_items/show.html.erb
+++ b/app/views/sent_items/show.html.erb
@@ -39,7 +39,7 @@
         </tr>
       </table>
     </div>
-    <div class="col-6">
+    <div class="col">
       <div class="mt-3 table-hover">
         <table>
           <tr>
@@ -47,12 +47,12 @@
             <td class="border-bottom"><%= @sent_item.product%></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="fa-solid fa-user"> presenter</i></th>
-            <td class="border-bottom"><%= @sent_item.sent_person.sent_person %></td>
+            <th class="border-bottom"><i class="far fa-user"> :from ( family ) </i></th>
+            <td class="border-bottom"><%= @sent_item.family_person.family_person %></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="far fa-user"> family</i></th>
-            <td class="border-bottom"><%= @sent_item.family_person.family_person %></td>
+            <th class="border-bottom"><i class="fa-solid fa-user"> :to ( presenter )</i></th>
+            <td class="border-bottom"><%= @sent_item.sent_person.sent_person %></td>
           </tr>
           <tr>
             <th class="border-bottom"><i class="fas fa-layer-group"> genre</i></th>
@@ -88,12 +88,12 @@
             <td class="border-bottom">
               <%= sent_item_return.price %>
             </td>
+          </tr>
           <tr>
             <% end %>
             <% end %>
             <th><i class="far fa-calendar-check"> create date</i></th>
             <td><%= @sent_item.created_at.to_s(:datetime_jp)%></td>
-          </tr>
           </tr>
         </table>
       </div>
