--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
           </ul>
         </div>
         <% else %>
-        <div class="" id="Navber">
+        <div class="login" id="Navber">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <%= link_to new_user_session_path, class: "btn btn-secondary rounded-pill" do %>
