--- a/app/views/sent_persons/_sent_person_form.html.erb
+++ b/app/views/sent_persons/_sent_person_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-100 mx-auto">
+  <div class="col mx-4">
     <table class="thead-dark">
       <%= form_with model: @sent_person, url: {controller: 'sent_persons', action: 'create' } , local: true do |f| %>
       <tr>
