--- a/app/views/give_returns/show.html.erb
+++ b/app/views/give_returns/show.html.erb
@@ -37,7 +37,7 @@
         </tr>
       </table>
     </div>
-    <div class="col-6">
+    <div class="col">
       <div class="mt-3 table-hover">
         <table>
           <tr>
