--- a/app/views/sent_returns/edit.html.erb
+++ b/app/views/sent_returns/edit.html.erb
@@ -13,11 +13,11 @@
         <%= form_with model: @sent_return,local: true do |f| %>
         <tr>
           <div class="form-group">
-            <th style="width: 40%"><i class="fas fa-gifts"> return gift</i></th>
+            <th style="width: 30%"><i class="fas fa-gifts"> return gift</i></th>
             <th style="width: 5%">
               <div class="badge badge-danger"> required</div>
             </th>
-            <td style="width: 55%"><%= f.text_field :product , class: "form-control"%></td>
+            <td style="width: auto%"><%= f.text_field :product , class: "form-control"%></td>
           </div>
         </tr>
         <tr>
@@ -26,7 +26,7 @@
             <th style="width: 5%">
               <div class="badge badge-danger"> required</div>
             </th>
-            <td style="width: 65%">
+            <td style="width: auto%">
               <%= f.collection_select :genre_id, Genre.all, :id, :genre,{include_blank: "選択して下さい"}, {class: "form-control input-sm"} %>
             </td>
           </div>
@@ -37,7 +37,7 @@
             <th style="width: 5%">
               <div class="badge badge-danger"> required</div>
             </th>
-            <td style="width: 65%"><%= f.number_field :price, class: "form-control" %></td>
+            <td style="width: auto%"><%= f.number_field :price, class: "form-control" %></td>
           </div>
         </tr>
         <tr>
@@ -46,7 +46,7 @@
             <th style="width: 5%">
               <div></div>
             </th>
-            <td style="width: 65%"><%= f.text_field  :introduction, class: "form-control"%></td>
+            <td style="width: auto%"><%= f.text_field  :introduction, class: "form-control"%></td>
           </div>
         </tr>
         <tr>
@@ -55,7 +55,7 @@
             <th style="width: 5%">
               <div class="badge badge-danger"> required</div>
             </th>
-            <td style="width: 65%"><%= f.date_field :return_day, class: "form-control"%></td>
+            <td style="width: auto%"><%= f.date_field :return_day, class: "form-control"%></td>
           </div>
         </tr>
         <tr>
@@ -64,7 +64,7 @@
             <th style="width: 5%">
               <div></div>
             </th>
-            <td style="width: 65%"><%= f.file_field:image %> </td>
+            <td style="width: auto%"><%= f.file_field:image %> </td>
           </div>
         </tr>
         <tr>
