give_itemバリデーション追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,3 +33,7 @@ $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 .navbar-brand{
   font-size: 60px;
 }
+
+.login{
+  flex-direction: column;
+}
