--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,7 +1,9 @@
 <% if obj.errors.any? %>
-<% obj.errors.full_messages.each do |message| %>
-<ul>
-  <li><%= message %></li>
-</ul>
-<% end %>
+<div id="error_explanation" class="alert alert-danger">
+  <ul class="mb-0">
+    <% obj.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
+</div>
 <% end %>
