--- a/app/views/family_persons/new.html.erb
+++ b/app/views/family_persons/new.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+<%= render "shared/error_messages" ,obj: @family_person %>
   <% if flash.now[:notice] %>
   <p class="notice"><%= flash.now[:notice] %></p>
   <% end %>
