--- a/app/views/give_persons/edit.html.erb
+++ b/app/views/give_persons/edit.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row">
+    <%= render "shared/error_messages" ,obj: @give_person %>
     <% if flash.now[:notice] %>
     <p class="notice"><%= flash.now[:notice] %></p>
     <% end %>
