--- a/app/views/give_persons/new.html.erb
+++ b/app/views/give_persons/new.html.erb
@@ -1,5 +1,11 @@
-<div class="container mb-5">
-  <i class="fa-solid fa-user" fa-4x"> presenter</i>
+<div class="container">
+  <div class="row">
+    <%= render "shared/error_messages" ,obj: @give_person %>
+    <% if flash.now[:notice] %>
+    <p class="notice"><%= flash.now[:notice] %></p>
+    <% end %>
+    <h3>give_pserson new</h3>
+  </div>
 </div>
 <div class="row">
   <div class="col-100 mx-auto">
