--- a/app/views/sent_items/new.html.erb
+++ b/app/views/sent_items/new.html.erb
@@ -1,15 +1,7 @@
 <div class="container">
-  <% if @sent_item.errors.any? %>
-  <div class="notification is-danger">
-    <h2><%= pluralize(@sent_item.errors.count, "error") %> prohibited this object from being saved: not successfully
-    </h2>
-    <ul>
-      <% @sent_item.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
+  <%= render "shared/error_messages" ,obj: @sent_item %>
+  <% if flash.now[:notice] %>
+  <p class="notice"><%= flash.now[:notice] %></p>
   <% end %>
-  <i class="fas fa-gift fa-3x"> gift</i>
 </div>
 <%= render "sent_items/sent_item_form" %>
