--- a/app/views/genres/new.html.erb
+++ b/app/views/genres/new.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <%= render "shared/error_messages" ,obj: @genre %>
   <% if flash.now[:notice] %>
   <p class="notice"><%= flash.now[:notice] %></p>
   <% end %>
