--- a/app/views/sent_persons/edit.html.erb
+++ b/app/views/sent_persons/edit.html.erb
@@ -1,10 +1,8 @@
 <div class="container">
-  <div class="row">
-    <% if flash.now[:notice] %>
-    <p class="notice"><%= flash.now[:notice] %></p>
-    <% end %>
-    <h3>Sent_pserson edit</h3>
-  </div>
+  <%= render "shared/error_messages" ,obj: @sent_person %>
+  <% if flash.now[:notice] %>
+  <p class="notice"><%= flash.now[:notice] %></p>
+  <% end %>
 </div>
 <div class="row">
   <div class="col-100 mx-auto">
