各ページ表題修正

--- a/app/views/family_persons/edit.html.erb
+++ b/app/views/family_persons/edit.html.erb
@@ -3,7 +3,7 @@
   <% if flash.now[:notice] %>
   <p class="notice"><%= flash.now[:notice] %></p>
   <% end %>
-  <i class=" fa-solid fa-users fa-2x"> Edit_Family</i>
+  <h3><i class=" fa-solid fa-users"> family edit</i></h3>
 </div>
 <div class="row">
   <div class="col mx-3">
