--- a/app/views/give_returns/index_show.html.erb
+++ b/app/views/give_returns/index_show.html.erb
@@ -11,7 +11,7 @@
       <div class="d-grid gap-3">
         <table class="table table-hover">
           <% @give_returns.each_with_index do |give_return,i| %>
-          <thead class="table-warning">
+          <thead class="table-danger">
             <tr>
               <th>Return No. <%=i +1 %></th>
               <th></th>
