--- a/app/views/sent_persons/new.html.erb
+++ b/app/views/sent_persons/new.html.erb
@@ -5,7 +5,7 @@
   <% end %>
 </div>
 <div class="row">
-  <div class="col-100 mx-auto">
+  <div class="col mx-3">
     <table class="thead-dark">
       <%= form_with model: @sent_person, url: {controller: 'sent_persons', action: 'create' } , local: true do |f| %>
       <tr>
