--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -8,7 +8,7 @@
   </div>
   <div class="container">
     <div class="row justify-content-around">
-      <%= link_to give_items_path, class: "btn btn-warning rounded-pill", method: :get do %>
+      <%= link_to give_items_path, class: "btn btn-danger rounded-pill", method: :get do %>
       <i class="fas fa-gift"> gift item</i>
       <% end %>
       <%= link_to sent_items_path, class: "btn btn-info rounded-pill", method: :get do %>
@@ -16,7 +16,7 @@
       <% end %>
     </div>
     <div class="row justify-content-around">
-      <%= link_to give_persons_path, class: "btn btn-danger rounded-pill", method: :get do %>
+      <%= link_to give_persons_path, class: "btn btn-warning rounded-pill", method: :get do %>
       <i class="fa-solid fa-people-group "> presenter </i>
       <% end %>
       <%= link_to sent_persons_path, class: "btn btn-secondary rounded-pill", method: :get do %>
