--- a/app/views/family_persons/new.html.erb
+++ b/app/views/family_persons/new.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-<%= render "shared/error_messages" ,obj: @family_person %>
+  <%= render "shared/error_messages" ,obj: @family_person %>
   <% if flash.now[:notice] %>
   <p class="notice"><%= flash.now[:notice] %></p>
   <% end %>
-  <i class=" fa-solid fa-users fa-2x"> Family</i>
+  <h3><i class=" fa-solid fa-users"> family register</i></h3>
 </div>
 <div class="row">
   <div class="col mx-3">
