--- a/app/views/genres/edit.html.erb
+++ b/app/views/genres/edit.html.erb
@@ -1,5 +1,8 @@
 <div class="container">
   <%= render "shared/error_messages" ,obj: @genre %>
-  <i class="fas fa-layer-group fa-4x"> edit_genre</i>
+  <% if flash.now[:notice] %>
+  <p class="notice"><%= flash.now[:notice] %></p>
+  <% end %>
+  <h3><i class="fas fa-layer-group"> genre edit</i></h3>
 </div>
 <%= render "genres/genre_form" %>
