--- a/app/views/give_items/new.html.erb
+++ b/app/views/give_items/new.html.erb
@@ -3,6 +3,6 @@
   <% if flash.now[:notice] %>
   <p class="notice"><%= flash.now[:notice] %></p>
   <% end %>
-  <i class="fas fa-gift fa-3x"> gift</i>
+  <i class="fas fa-gift fa-2x"> gift register</i>
 </div>
 <%= render "give_items/give_item_form" %>
