--- a/app/views/give_items/search.html.erb
+++ b/app/views/give_items/search.html.erb
@@ -11,7 +11,7 @@
         <div class="d-grid gap-3">
           <table class="table table-hover">
             <% @give_items.each_with_index do |give_item,i| %>
-            <thead class="table-warning">
+            <thead class="table-danger">
               <tr>
                 <th>ITEM No. <%=i +1 %></th>
                 <th></th>
