--- a/app/views/give_persons/index.html.erb
+++ b/app/views/give_persons/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="text-right">
     <p>
-      <%= link_to new_give_person_path, class: "btn btn-outline-danger rounded-pill", method: :get do %>
+      <%= link_to new_give_person_path, class: "btn btn-outline-warning rounded-pill", method: :get do %>
       <i class="fa-solid fa-user"> new</i>
       <% end %>
     </p>
@@ -21,7 +21,7 @@
       <div class="d-grid gap-3">
         <table class="table table-hover">
           <% @give_persons.each_with_index do |give_person,i| %>
-          <thead class="table-danger">
+          <thead class="table-warning">
             <tr>
               <th>Presenter No. <%=i+1%></th>
               <th></th>
