--- a/app/views/sent_items/_sent_item_form.html.erb
+++ b/app/views/sent_items/_sent_item_form.html.erb
@@ -95,6 +95,10 @@
       </tr>
     </table>
     <p class="mt-3">
+      <%= link_to  sent_items_path, class: "btn btn-default rounded-pill" do %>
+      <i class="fas fa-arrow-circle-left"></i>
+      <span>back</span>
+      <% end %>
       <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
       <i class="far fa-check-circle"> save</i>
       <% end %>
