--- a/app/views/sent_items/edit.html.erb
+++ b/app/views/sent_items/edit.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
-  <div class="row">
-    <% if flash.now[:notice] %>
-    <p class="notice"><%= flash.now[:notice] %></p>
-    <% end %>
-  </div>
+  <% if flash.now[:notice] %>
+  <p class="notice"><%= flash.now[:notice] %></p>
+  <% end %>
+  <i class="fas fa-gift fa-2x"> gift edit</i>
 </div>
 <%= render "sent_items/sent_item_form" %>
